--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "vim/bundle/rope-omni"]
+	path = vim/bundle/rope-omni
+	url = https://github.com/rygwdn/rope-omni.git
