--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,9 @@
 [submodule "vim/bundle/rope-omni"]
 	path = vim/bundle/rope-omni
 	url = https://github.com/rygwdn/rope-omni.git
+[submodule "vim/bundle/matlab"]
+	path = vim/bundle/matlab
+	url = https://github.com/vim-scripts/MatlabFilesEdition.git
+[submodule "vim/bundle/latex-box"]
+	path = vim/bundle/latex-box
+	url = https://github.com/LaTeX-Box-Team/LaTeX-Box.git
