--- a/.gitmodules
+++ b/.gitmodules
@@ -29,9 +29,6 @@
 [submodule "vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
-[submodule "vim/bundle/rope-omni"]
-	path = vim/bundle/rope-omni
-	url = https://github.com/rygwdn/rope-omni.git
 [submodule "vim/bundle/matlab"]
 	path = vim/bundle/matlab
 	url = https://github.com/vim-scripts/MatlabFilesEdition.git
@@ -44,3 +41,9 @@
 	path = vim/bundle/vimwiki
 	url = https://github.com/vim-scripts/vimwiki.git
     ignore = untracked
+[submodule "vim/bundle/largeFile"]
+	path = vim/bundle/largeFile
+	url = https://github.com/vim-scripts/LargeFile.git
+[submodule "vim/bundle/holokai"]
+	path = vim/bundle/holokai
+	url = https://github.com/ryanc/holokai.git
