--- a/.gitmodules
+++ b/.gitmodules
@@ -7,10 +7,6 @@
 [submodule "vim/bundle/nerdcommenter"]
 	path = vim/bundle/nerdcommenter
 	url = https://github.com/scrooloose/nerdcommenter.git
-[submodule "vim/bundle/snipmate"]
-	path = vim/bundle/snipmate
-	url = https://github.com/msanders/snipmate.vim.git
-    ignore = untracked
 [submodule "vim/bundle/markdown"]
 	path = vim/bundle/markdown
 	url = https://github.com/tpope/vim-markdown.git
@@ -50,3 +46,6 @@
 [submodule "vim/bundle/vimseek"]
 	path = vim/bundle/vimseek
 	url = https://github.com/goldfeld/vim-seek
+[submodule "vim/bundle/snipmate"]
+	path = vim/bundle/snipmate
+	url = https://github.com/garbas/vim-snipmate.git
