--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim/bundle/tcomment"]
 	path = vim/bundle/tcomment
 	url = git@github.com:tomtom/tcomment_vim.git
+[submodule "vim/bundle/jedi"]
+	path = vim/bundle/jedi
+	url = git@github.com:davidhalter/jedi-vim.git
