--- a/i3/config
+++ b/i3/config
@@ -191,7 +191,12 @@ mode "$mode_system" {
 
 bindsym XF86PowerOff mode "$mode_system"
 
+bindsym $mod+p exec "pavucontrol"
+
 # Startup programs
 exec --no-startup-id nm-applet
 exec --no-startup-id pa-applet
 exec --no-startup-id feh --bg-fill /usr/share/backgrounds/Wallpaper-ST2-Purple.jpg
+
+# toggle keyboard layout
+exec --no-startup-id "toggle_xkbmap.sh"
