--- a/i3/config
+++ b/i3/config
@@ -31,6 +31,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run -fn 'DejaVu Sans Mono Book-13' -nb '#000000' -nf '#87FF03' -sb '#87FF03' -sf '#000000'
+bindsym $mod+p exec passmenu -fn 'DejaVu Sans Mono Book-13' -nb '#000000' -nf '#87FF03' -sb '#87FF03' -sf '#000000'
 
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -190,8 +191,6 @@ mode "$mode_system" {
 }
 
 bindsym XF86PowerOff mode "$mode_system"
-
-bindsym $mod+p exec "pavucontrol"
 
 # Startup programs
 exec --no-startup-id nm-applet
